syntax = "proto3";
package grpchandlers;
option go_package = "internal/grpcimp";

message MetricData {
  enum Type {
    UNSPECIFIED = 0;
    COUNTER = 1;
    GAUGE = 2;
  }
  Type type = 1;
  string name = 2;
  double value = 3;
  int64 delta = 4;
}

message UpdateMetricsRequest {
  repeated MetricData data = 1;
}

message UpdateMetricsResponse {
  string error = 1;
}

service Metrics {
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
}